test/fixtures/hardcoded-secrets/positive/vercel.ts
export const VERCEL_TOKEN = "abcdefghijklmnopqrstuvwx";
