test/fixtures/hardcoded-secrets/negative/vercel.ts
export const VERCEL_TOKEN = process.env.VERCEL_TOKEN;
